# Unnamed-Bot

./: .gitignore  Cargo.toml  README.MD
src/: main.rs  types.rs
src/commands/: age.rs  join.rs  leave.rs  mod.rs  play.rs  skip.rs  stop.rs
src/old/: main.rs  old_main.rs
src/slash_commands/: age.rs
