[package]
name = "unamed-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.21.2", features = ["full"] }
poise = "0.6"
songbird = {version = "0.4", default-features = true, features = ["builtin-queue"]}
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }

[dependencies.serenity]
version = "0.12"
features = ["cache", "framework", "standard_framework", "voice"]
