[package]
name = "unnamed_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.21.2", features = ["full"] }
poise = "0.6"
songbird = {version = "0.4", default-features = true, features = ["serenity", "builtin-queue"] }
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
log = "0.4"
symphonia = "0.5.0"
serde_json = "1.0"

[dependencies.serenity]
version = "0.12"
features = ["voice"]

[profile.release]
lto = true
# codegen-units = 1